@@ -5,13 +5,13 @@ X-0: =?ISO-8859-1?Q?=00?=
 X-1: =?ISO-8859-1?Q?=31?=
 X-1b: =?ISO-8859-1?Q?=31=
 X-Wrapped: eins
-        zwei
-	drei
+ zwei
+  drei
 X-NoMimeWrap: =?iso-8859-1?q?abc
-		def
-                ghi?=
+ def
+  ghi?=
 X-Mixed:  =?iso-8859-1?q?abc?=
-	def
+ def
 X-B64: =?iso-8859-1?b?VGhpcyBpcyBCQVNFNjQ=?=
 X-B64-Broken: =?iso-8859-1?b?VGhpcyBpcyBCQVNFNjQ?=
 X-Q75total: =?ISO-8859-1?Q?0123456789012345678901234567890123456789012345678901234567?=
